tests/NormalTests/paczka1/fuzzy1/89212380.err
Error in line 4: N616 A631 81,18
Error in line 1: N616 A382 49,9
Error in line 9: N616 A494 94,9
Error in line 13: 7475P A494 55,3
Error in line 12: 1NBniKSuW A494 92,5
Error in line 26: 7475P S189 61,5
